--- a/react-tutorial-master/public/index.html
+++ b/react-tutorial-master/public/index.html
@@ -20,6 +20,7 @@
 
 
     </script>
+    <script type="text/babel" src="scripts/tutorial2.js"></script>
     <script type="text/babel" src="scripts/tutorial1.js"></script>
   </body>
 </html>
