--- a/react-tutorial-master/public/index.html
+++ b/react-tutorial-master/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>React Tutorial</title>
+    <title>React Ion</title>
     <!-- Not present in the tutorial. Just for basic styling. -->
     <link rel="stylesheet" href="css/base.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
@@ -20,7 +20,7 @@
 
 
     </script>
-    <script type="text/babel" src="scripts/tutorial2.js"></script>
+    <!-- <script type="text/babel" src="scripts/tutorialz.js"></script> -->
     <script type="text/babel" src="scripts/tutorial1.js"></script>
   </body>
 </html>
